[gd_scene load_steps=3 format=3 uid="uid://vokwuaxdn2po"]

[ext_resource type="Script" path="res://scripts/Carousel.gd" id="1_hihcj"]
[ext_resource type="AudioStream" uid="uid://u60bf7gbu4y1" path="res://Assets/sfx/blip.wav" id="2_t2clk"]

[node name="Carousel" type="Node3D"]
script = ExtResource("1_hihcj")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="DoneWait" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_t2clk")
volume_db = -20.42
max_polyphony = 5

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DoneWait" to="." method="_on_done_wait_timeout"]
